# noirhack-game-engine

./: .gitignore  README.md
unity-client/Assets/: NetworkManager.cs
unity-client/Assets/Prefabs/: NetworkManager.prefab  PlayerCard.prefab  PlayerRow.prefab  RoleEntry.prefab
unity-client/Assets/Resources/: NetworkManager.cs
unity-client/Assets/Scripts/: ActionManager.cs  CardPicker.cs  GameRoomUI.cs  GameSceneController.cs  KeyPairStore.cs  LobbyUI.cs  MuteToggle.cs  NightActionManager.cs  PlayerCard.cs  PlayerCardEvents.cs  PlayerGridController.cs  ResultSceneController.cs  ShuffleManager.cs  ShufflePayloads.cs  SimpleConsole.cs
unity-client/Assets/TextMesh Pro/Resources/Fonts & Materials/: LiberationSans SDF.asset
unity-client/Assets/UI Toolkit/: PanelSettings.asset
unity-client/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
unity-client/UserSettings/: EditorUserSettings.asset  Search.settings
unity-client/UserSettings/Layouts/: CurrentMaximizeLayout.dwlt  default-6000.dwlt
wss-server/: Cargo.toml  README.md
wss-server/src/: lib.rs  main.rs  message.rs  types.rs  utils.rs
wss-server/src/game/: role.rs
wss-server/src/room/: room.rs
wss-server/src/ws/: client.rs
wss-server/tests/: full_game_flow.rs  night_phase.rs
