[package]
name = "wss-server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13"
actix-web = "4"
actix-web-actors = "4"
anyhow = "1.0.98"
rand = "0.9.1"
reqwest = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1", features = ["full"] }
ureq = "2.5"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tokio-tungstenite = "0.21"
tungstenite = "0.21"
url = "2"
portpicker = "0.1"
futures = "0.3"
ureq = "2.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
